; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_atmel_spi.c_atmel_spi_xfer_is_last.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_atmel_spi.c_atmel_spi_xfer_is_last.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_message = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }
%struct.spi_transfer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_message*, %struct.spi_transfer*)* @atmel_spi_xfer_is_last to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atmel_spi_xfer_is_last(%struct.spi_message* %0, %struct.spi_transfer* %1) #0 {
  %3 = alloca %struct.spi_message*, align 8
  %4 = alloca %struct.spi_transfer*, align 8
  store %struct.spi_message* %0, %struct.spi_message** %3, align 8
  store %struct.spi_transfer* %1, %struct.spi_transfer** %4, align 8
  %5 = load %struct.spi_message*, %struct.spi_message** %3, align 8
  %6 = getelementptr inbounds %struct.spi_message, %struct.spi_message* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load %struct.spi_transfer*, %struct.spi_transfer** %4, align 8
  %10 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %9, i32 0, i32 0
  %11 = icmp eq i32* %8, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
